- Fixed bug #29334 (mail() provides incorrect message time header)